<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShowOff</string>
    <string name="fcm_message" tools:ignore="MissingTranslation">ShowOff</string>
    <string name="talent" tools:ignore="MissingTranslation">Select your Talent &amp; Showoff</string>
    <string name="home" tools:ignore="MissingTranslation">Home</string>
    <string name="search" tools:ignore="MissingTranslation">Search</string>
    <string name="upload" tools:ignore="MissingTranslation">Upload</string>
    <string name="save" tools:ignore="MissingTranslation">Save</string>
    <string name="confirm" tools:ignore="MissingTranslation">Confirm</string>
    <string name="bio" tools:ignore="MissingTranslation">My life behind the camera.</string>
    <string name="see_website">See Website</string>
    <string name="total_upvotes">Total Upvotes</string>
    <string name="total_posts">Total Posts</string>
    <string name="take_photo">Take photo/video</string>
    <string name="gallery">Upload from gallery</string>
    <string name="activity_text">Activity</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="start_recording">Start Recording</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="read_file">This app needs access to your file storage so that it can read video.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <string name="pick_from_galarry">Pick Images</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="singer">Singer</string>
    <string name="instruments">Instruments</string>
    <string name="dancer">Dancer</string>
    <string name="acting">Acting</string>
    <string name="poems">Poems</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="upvoted_text">Up voted your post</string>
    <string name="downvoted_text">Down voted your post</string>
    <string name="user_name">User Name</string>
    <string name="change_password">Change Password</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="edit_link">Edit Link</string>
    <string name="change_profile_pic">Change Profile Pic</string>
    <string name="comment">Comment</string>
    <string name="downvote">Downvote</string>
    <string name="upvote">Upvote</string>
    <string name="add_comment">Add Comment(Max 299 character)</string>
    <string name="post">Post</string>
    <string name="enter_post_description">Enter Post Description(Max 100 chracter)</string>
    <string name="finish">Finish</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

</resources>
