<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.Settings">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorBlueText"
        >

        <RelativeLayout
            android:id="@+id/back_button_overlay"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/white_arrow" />


        </RelativeLayout>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Settings"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />


    </RelativeLayout>



    <Button
        android:id="@+id/changepassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/title_bar_layout"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:text="@string/change_password" />

    <Button
        android:id="@+id/editbio"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/changepassword"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:text="@string/edit_bio" />

    <Button
        android:id="@+id/editlink"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/editbio"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:text="@string/edit_link" />

    <Button
        android:id="@+id/editprofile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/editlink"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:text="@string/change_profile_pic" />


</RelativeLayout>