<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".changepassword.ChangePassword">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorBlueText"
        >

        <RelativeLayout
            android:id="@+id/back_button_overlay"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/white_arrow" />


        </RelativeLayout>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />


    </RelativeLayout>


    <EditText
        android:id="@+id/etoldpass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/old_password"
        android:layout_below="@+id/title_bar_layout"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:background="@drawable/custom_border_withdrawal"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etnewpass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etoldpass"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:ems="10"
        android:background="@drawable/custom_border_withdrawal"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etcnfnewpass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirm_new_password"
        android:layout_below="@+id/etnewpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:ems="10"
        android:background="@drawable/custom_border_withdrawal"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/changepassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/etcnfnewpass"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_bg"
        android:foreground="@drawable/custom_ripple_rounded_rect"
        android:text="@string/change_password" />
</RelativeLayout>