<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorBlueText"
        >

        <TextView
            android:id="@+id/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />


    </RelativeLayout>

    <brenda.com.showoff.Util.RoundedImageView
        android:id="@+id/user_rounded_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:src="@drawable/entrant_profile_pic"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="Mukul Sharma"
        android:textColor="#474747"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="Mukul Sharma"
        android:textColor="#474747"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:gravity="center"
        android:text="@string/bio"
        android:textColor="#969696"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/link_text"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:gravity="center"
        android:text="@string/bio"
        android:textColor="#969696"
        android:textSize="13sp" />

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:foreground="@drawable/custom_ripple_rounded_rect"
        android:text="Edit profile"
        android:textColor="@color/colorWhite"
         />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:foreground="@drawable/custom_ripple_rounded_rect"
        android:text="@string/logout"
        android:textColor="@color/colorWhite"
        android:visibility="visible" />



</LinearLayout>