<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/total_rl"
    android:background="@color/colorBg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorBlueText"
        >

        <RelativeLayout
            android:id="@+id/back_button_overlay"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/white_arrow" />


        </RelativeLayout>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Sign Up"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/user_image_view"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:background="@drawable/logo"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:visibility="visible"
                />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                >


                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border_withdrawal"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:labelFor="@id/first_name_edit_text"
                    android:minWidth="100dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/colorBlueText"
                    android:textColorHint="@color/colorGray"
                    android:textSize="15sp"
                    />

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border_withdrawal"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:labelFor="@id/last_name_edit_text"
                    android:minWidth="100dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/colorBlueText"
                    android:textColorHint="@color/colorGray"
                    android:textSize="15sp"
                    />


            </LinearLayout>

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_border_withdrawal"
                android:hint="@string/username"
                android:inputType="text"
                android:minWidth="100dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:maxLength="10"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorBlueText"
                android:textColorHint="@color/colorGray"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_border_withdrawal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minWidth="100dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:maxLength="40"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorBlueText"
                android:textColorHint="@color/colorGray"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_border_withdrawal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minWidth="100dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:maxLength="20"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorBlueText"
                android:textColorHint="@color/colorGray"
                android:textSize="15sp"
                />

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_bg"
                android:foreground="@drawable/custom_ripple_rounded_rect"
                android:text="Next"
                android:textColor="@color/colorWhite"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:id="@+id/progress_bar_ll"
                android:visibility="gone"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:foreground="@drawable/custom_ripple_rounded_rect"
                >

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorWhite"
                    android:visibility="visible"
                    />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>