<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorBlueText"
        >



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/total_posts_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="44"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/total_posts_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_posts"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:text="mxs2649"
            android:layout_marginBottom="7dp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/total_votes_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="44"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/total_votes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_upvotes"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />

        </LinearLayout>




    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_marginTop="10dp"
        android:id="@+id/scroll"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

            <!--<ImageView-->
                <!--android:id="@+id/user_image_view"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:layout_gravity="center"-->
                <!--android:background="@drawable/profile_image"-->
                <!--android:cropToPadding="false"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:visibility="visible"-->
                <!--/>-->

            <brenda.com.showoff.Util.RoundedImageView
                android:id="@+id/user_rounded_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:visibility="visible"
                android:src="@drawable/entrant_profile_pic"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

                <TextView
                    android:id="@+id/role_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Actor"
                    android:textColor="#969696"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                >

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="Mukul Sharma"
                android:textColor="#474747"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/bio"
                android:textColor="#969696"
                android:textSize="13sp" />

                <Button
                    android:id="@+id/see_website_button"
                    android:layout_width="180dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_bg"
                    android:foreground="@drawable/custom_ripple_rounded_rect"
                    android:text="@string/see_website"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    </ScrollView>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:columnWidth="100dp"
        android:drawSelectorOnTop="true"
        android:gravity="center"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        android:layout_below="@+id/scroll"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:clickable="true"/>

</RelativeLayout>